--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,68 +1,75 @@
 .index-top-section {
-    display: grid;
-    justify-content: center;
-    border-style: double;
+    display: flex;
+    flex-direction: column;
     border-width: 15px;
-    border-color: rgba(125, 203, 255, 0.397);
-
     padding: 5px;
-
-
 }
 
 .welcome-header {
-    text-align: center;
     font-style: italic;
     margin-top: 10px;
-    text-decoration: underline;
+    margin: auto;
 }
 
 nav.more-about-me-link {
-    text-align: center;
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: end;
+}
+
+ul.links {
+    list-style-type: none;
+    padding-left: 5%;
+    margin-right: 100px;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     font-family: Arial;
     font-size: 140%;
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color: rgb(255, 255, 243);
+
 }
 
 .about-me-section {
-    display: grid;
-    grid-auto-flow: column;
+    display: flex;
     padding: 10px;
-    background-color: rgb(0, 0, 0);
-    justify-content: space-evenly;
+    background-color: blanchedalmond;
+    justify-content: space-around;
+    text-align: start;
 }
 
 h2.about-me-header {
-    position: relative;
     font-style: italic;
-    text-decoration: underline;
-
 }
-
-p.about-me-paragraph {}
 
 img.pic-of-me {
     width: 550px;
     border-style: inset;
     border-width: thick;
-    border-color: rgb(0, 0, 0);
+    border-color: rgb(134, 134, 134);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .hobbies-section {
-    display: grid;
-    grid-auto-flow: column;
-    justify-self: right;
-    background-color: rgb(0, 0, 0);
+    display: flex;
+    background-color: beige;
     padding: 10px;
+    justify-content: space-around;
+}
+
+.terraria {
+    height: 350px;
+    border-style: inset;
+    border-width: thick;
+    border-color: rgb(134, 134, 134);
 
 }
 
+
+
 .hobbies-hdr-para {
-    display: grid;
-    justify-self: right;
+    display: flex;
+    flex-direction: column;
 }
