--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    margin: auto;
+}
+
 .index-top-section {
     display: flex;
     flex-direction: column;
@@ -16,7 +25,7 @@ nav.more-about-me-link {
     justify-content: end;
 }
 
-ul.links {
+.links {
     list-style-type: none;
     padding-left: 5%;
     margin-right: 100px;
@@ -27,19 +36,19 @@ body {
     flex-direction: column;
     font-family: Arial;
     font-size: 140%;
-    background-color: rgb(255, 255, 243);
+    background-color: #EBF5DF;
 
 }
 
 .about-me-section {
     display: flex;
     padding: 10px;
-    background-color: blanchedalmond;
+    background-color: #BAD4AA;
     justify-content: space-around;
     text-align: start;
 }
 
-h2.about-me-header {
+.header {
     font-style: italic;
 }
 
@@ -47,29 +56,44 @@ img.pic-of-me {
     width: 550px;
     border-style: inset;
     border-width: thick;
-    border-color: rgb(134, 134, 134);
+    border-color: rgb(255, 255, 255);
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 .hobbies-section {
     display: flex;
-    background-color: beige;
+    background-color: #D4D4AA;
     padding: 10px;
     justify-content: space-around;
+    text-align: start;
+    margin-bottom: 10px;
 }
 
-.terraria {
-    height: 350px;
+
+.hobby-pics {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 550px;
+    margin: 20px
+}
+
+.bball {
     border-style: inset;
     border-width: thick;
-    border-color: rgb(134, 134, 134);
-
+    border-color: rgb(255, 255, 255);
 }
 
-
+ul {
+    list-style-type: square;
+}
 
 .hobbies-hdr-para {
     display: flex;
     flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
