--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,22 @@ html {
 body {
     min-height: 100%;
     margin: auto;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    animation-duration: 3s;
+    animation-name: slide;
+}
+
+@keyframes slide {
+    from {
+        margin-left: 100%;
+        width: 200%;
+    }
+
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
 }
 
 .index-top-section {
@@ -20,7 +36,7 @@ body {
 }
 
 nav.more-about-me-link {
-    width: 20rem;
+    margin-right: 10rem;
 }
 
 .links {
@@ -37,7 +53,6 @@ body {
 
 .about-me-section {
     display: flex;
-    max-height: 400rem;
     padding: 10px;
     background-color: #BAD4AA;
     justify-content: space-evenly;
@@ -46,16 +61,6 @@ body {
 
 .header {
     font-style: italic;
-}
-
-img.pic-of-me {
-    width: 550px;
-    border-style: inset;
-    border-width: thick;
-    border-color: rgb(255, 255, 255);
-    margin-top: 10px;
-    margin-bottom: 10px;
-
 }
 
 .hobbies-section {
@@ -83,10 +88,24 @@ img.pic-of-me {
     border-color: rgb(255, 255, 255);
     margin-top: 10px;
     margin-bottom: 10px;
+    transition: all 2s;
+}
+
+.pic:hover {
+    width: 700px;
 }
 
 ul {
     list-style-type: square;
+}
+
+details {
+    inline-size: 15rem;
+    cursor: pointer;
+    border: solid;
+    border-color: black;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .hobbies-hdr-para {
