--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,118 +1,109 @@
-html {
-    height: 100%;
-}
-
-body {
-    min-height: 100%;
-    margin: auto;
-    line-height: 1.5;
-    letter-spacing: 1px;
-    animation-duration: 3s;
-    animation-name: slide;
-}
-
-@keyframes slide {
-    from {
-        margin-left: 100%;
-        width: 200%;
+@media all {
+    body {
+        line-height: 1.5;
+        letter-spacing: 1px;
+        animation-duration: 2s;
+        animation-name: slidein;
+        font-family: Arial;
+        font-size: 140%;
+        background-color: #FFFFFF;
+        margin: auto;
     }
 
-    to {
-        margin-left: 0%;
-        width: 100%;
+    @keyframes slidein {
+        from {
+            width: 200%;
+            margin-left: 100%;
+
+        }
+
+        to {
+            margin-left: 0%;
+            width: 100%;
+        }
     }
-}
 
-.index-top-section {
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    align-items: flex-end;
-}
+    .index-top-section {
+        display: grid;
+        padding: 5px;
+    }
 
-.welcome-header {
-    font-style: italic;
-    align-self: center;
-}
+    h1,
+    h2 {
+        font-style: italic;
+        text-align: center;
+    }
 
-nav.more-about-me-link {
-    margin-right: 10rem;
-}
+    .nav-bar {
+        top: 0;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        background-color: #588B8B;
+        overflow: hidden;
+        opacity: 0.7;
+        position: sticky;
+    }
 
-.links {
-    list-style-type: none;
-}
+    .link1 {
+        float: right;
+    }
 
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: Arial;
-    font-size: 140%;
-    background-color: #EBF5DF;
-}
+    .link1 a {
+        display: block;
+        text-decoration: none;
+        color: white;
+        text-align: center;
+        padding: 5px;
+    }
 
-.about-me-section {
-    display: flex;
-    padding: 10px;
-    background-color: #BAD4AA;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
+    .link1 a:hover {
+        background-color: #2b6280;
+    }
 
-.header {
-    font-style: italic;
-}
+    .about-me-section {
+        display: flex;
+        padding: 10px;
+        background-color: #FFD5C2;
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: space-evenly;
+    }
 
-.hobbies-section {
-    display: flex;
-    background-color: #D4D4AA;
-    padding: 10px;
-    justify-content: space-evenly;
-    flex-wrap: wrap-reverse;
-}
+    .hobbies-section {
+        text-align: center;
+        display: flex;
+        background-color: #F28F3B;
+        padding: 10px;
+        justify-content: space-evenly;
+        flex-wrap: wrap-reverse;
+    }
 
+    .hobbies-list-tab {
+        display: inline;
+        cursor: pointer;
+        background-color: #f7b77f;
+        box-shadow: 5px 5px 5px #000000;
+        border-radius: 10px;
+        padding: 5px;
+    }
 
-.hobby-pics {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 20px;
-    justify-content: center;
+    .pic {
+        width: 550px;
+        border-style: inset;
+        border-width: thick;
+        border-color: rgb(255, 255, 255);
+        margin-top: 10px;
+        margin-bottom: 10px;
+        transition: all 2s;
+        border-radius: 100%;
+    }
 
-}
+    .pic:hover {
+        width: 700px;
+    }
 
-.pic {
-    width: 550px;
-    border-style: inset;
-    border-width: thick;
-    border-color: rgb(255, 255, 255);
-    margin-top: 10px;
-    margin-bottom: 10px;
-    transition: all 2s;
-}
-
-.pic:hover {
-    width: 700px;
-}
-
-ul {
-    list-style-type: square;
-}
-
-details {
-    inline-size: 15rem;
-    cursor: pointer;
-    border: solid;
-    border-color: black;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.hobbies-hdr-para {
-    display: flex;
-    flex-direction: column;
-}
-
-footer {
-    margin-top: auto;
+    .hobbies-list {
+        list-style-type: square;
+    }
 }
