--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,6 +55,7 @@
         color: white;
         text-align: center;
         padding: 5px;
+        text-transform: uppercase;
     }
 
     .index-link a:hover {
@@ -128,6 +129,8 @@
         color: white;
         text-align: center;
         padding: 5px;
+        text-transform: uppercase;
+
     }
 
     .secondpage-link a:hover {
@@ -182,9 +185,51 @@
         background-color: lightblue;
     }
 
-    .timeline {
-        background-color: rgb(111, 204, 235);
-        display: flex;
-        flex-direction: column;
+    .timeline-section {
+        background-color: #f7b77f;
     }
+
+    .timeline {
+        position: relative;
+        max-width: 800px;
+        margin: 50px auto;
+    }
+
+    .timeline::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        width: 10px;
+        background-color: #333;
+    }
+
+    .text-box {
+        position: relative;
+        margin-bottom: 50px;
+    }
+
+
+
+    .content {
+        position: relative;
+        padding: 20px;
+        background-color: #fff;
+        border: 2px solid #333;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    .date {
+        font-weight: bold;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .description {
+        margin-top: 10px;
+    }
+
+
 }
