--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,10 +23,6 @@
         }
     }
 
-    .top-section {
-        display: grid;
-        padding: 5px;
-    }
 
     h1,
     h2 {
@@ -34,31 +30,45 @@
         text-align: center;
     }
 
-    .index-nav-bar {
+    .nav-bar {
+        display: grid;
         top: 0;
         margin: 0;
         padding: 0;
         list-style-type: none;
         background-color: #588B8B;
-        overflow: hidden;
         opacity: 0.7;
         position: sticky;
     }
 
-    .index-link {
-        float: right;
+    .Kevin {
+        justify-self: start;
+        font-style: normal;
+        color: red;
+        font-size: 4rem;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
-    .index-link a {
+    .Kevin span {
+        color: black;
+    }
+
+    .link {
+        position: absolute;
+        justify-self: end;
+        bottom: 0%;
+    }
+
+    .link a {
         display: block;
         text-decoration: none;
         color: white;
-        text-align: center;
         padding: 5px;
         text-transform: uppercase;
     }
 
-    .index-link a:hover {
+    .link a:hover {
         background-color: #2b6280;
     }
 
@@ -95,13 +105,13 @@
         border-width: thick;
         border-color: rgb(255, 255, 255);
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 5rem;
         transition: all 2s;
         border-radius: 100%;
     }
 
     .pic:hover {
-        width: 700px;
+        width: 500px;
     }
 
     .hobbies-list {
@@ -148,6 +158,7 @@
         justify-content: space-evenly;
         background-color: lightblue;
         flex-wrap: wrap;
+
     }
 
     .basketball-section-header-paragraph {
@@ -161,6 +172,8 @@
         width: 30rem;
         align-items: center;
         justify-content: center;
+        margin-bottom: 10rem;
+
 
     }
 
@@ -175,24 +188,24 @@
 
 
     .vid {
-        align-self: flex-end;
+        margin-top: 4rem;
+        margin-bottom: 10rem;
+
     }
 
 
-    .vid-section {
-        display: flex;
-        justify-content: center;
-        background-color: lightblue;
-    }
 
     .timeline-section {
+        display: flex;
+        flex-direction: column;
         background-color: #f7b77f;
+        align-items: center;
     }
 
     .timeline {
         position: relative;
         max-width: 800px;
-        margin: 50px auto;
+        margin-bottom: 3rem;
     }
 
     .timeline::before {
@@ -202,34 +215,48 @@
         bottom: 0;
         left: 50%;
         width: 10px;
-        background-color: #333;
+        background-color: #000000;
     }
 
     .text-box {
         position: relative;
-        margin-bottom: 50px;
-    }
-
-
-
-    .content {
-        position: relative;
         padding: 20px;
-        background-color: #fff;
+        background-color: #ffffff;
         border: 2px solid #333;
         border-radius: 5px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        margin-bottom: 50px;
+        transition: all 1ms;
+        width: 30rem;
+
+
+    }
+
+    .text-box:hover {
+        scale: 1.1;
     }
 
     .date {
         font-weight: bold;
-        margin-bottom: 10px;
         text-align: center;
+        text-decoration: underline;
     }
 
     .description {
-        margin-top: 10px;
+        text-align: center;
     }
 
+    .arrow {
+        position: absolute;
+        bottom: -15px;
+        left: 50%;
+        width: 0;
+        height: 0;
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        border-top: 25px solid #000000;
+        transform: translateX(-37%);
+        content: '';
+    }
 
 }
