--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,19 +36,21 @@
         }
     }
 
-
-    h1,
-    h2 {
-        font-style: italic;
-        text-align: center;
-    }
-
-    .top {
+    .logo-section {
         width: 100%;
         background-color: aquamarine;
         margin: 0%;
         top: 0;
     }
+
+
+
+    h1,
+    h2 {
+        font-style: italic;
+    }
+
+
 
     .Kevin {
         text-align: start;
@@ -98,6 +100,10 @@
         background-color: #474747;
     }
 
+    .title {
+        margin-bottom: 0;
+        text-align: center;
+    }
 
     .about-me-section {
         display: flex;
@@ -106,6 +112,10 @@
         flex-wrap: wrap;
         text-align: center;
         justify-content: space-evenly;
+    }
+
+    .about-me-header-paragraph {
+        width: 50rem;
     }
 
     .hobbies-section {
@@ -118,15 +128,27 @@
     }
 
     .hobbies-list-tab {
-        display: inline;
+        align-self: center;
         cursor: pointer;
         background-color: #f7b77f;
         box-shadow: 5px 5px 5px #000000;
         border-radius: 10px;
         padding: 5px;
+        width: 15rem;
     }
 
-    .pic {
+    .hobbies-header-list-paragraph {
+        display: flex;
+        flex-direction: column;
+        width: 50rem;
+
+    }
+
+    .hobbies-list {
+        list-style-type: square;
+    }
+
+    .pic-me {
         width: 550px;
         border-style: inset;
         border-width: thick;
@@ -137,12 +159,26 @@
         border-radius: 100%;
     }
 
-    .pic:hover {
+    .pic-basketball {
+        width: 550px;
+        border-style: inset;
+        border-width: thick;
+        border-color: rgb(255, 255, 255);
+        margin-top: 10px;
+        margin-bottom: 5rem;
+        transition: all 2s;
+        border-radius: 100%;
+    }
+
+    .pic-of-me:hover {
         width: 500px;
     }
 
-    .hobbies-list {
-        list-style-type: square;
+    .secondpage-logo-section {
+        background-color: rgb(180, 209, 199);
+        margin: 0%;
+        top: 0;
+        width: 100%;
     }
 
     .secondpage-nav-bar {
@@ -192,6 +228,9 @@
         text-align: center;
         width: 50rem;
     }
+
+
+
 
     .heat-logo,
     .lakers-logo {
