--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,346 +1,424 @@
-@media (max-width: 475px) {}
+body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    animation-duration: 2s;
+    animation-name: slidein;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 140%;
+    width: 100%;
+    margin: 0;
+    background-color: white;
+}
 
-@media (max-width: 640px) {}
-
-@media (max-width: 768px) {}
-
-@media (max-width: 1024px) {}
-
-@media (max-width: 1280px) {}
-
-@media all {
-
-
-
-    body {
-        line-height: 1.5;
-        letter-spacing: 1px;
-        animation-duration: 2s;
-        animation-name: slidein;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 140%;
-        background-color: #FFFFFF;
-        margin: auto;
+@keyframes slidein {
+    from {
+        width: 200%;
+        margin-left: 100%;
     }
 
-    @keyframes slidein {
-        from {
-            width: 200%;
-            margin-left: 100%;
-
-        }
-
-        to {
-            margin-left: 0%;
-            width: 100%;
-        }
-    }
-
-    .index-body {
-        background-color: red;
-    }
-
-    .logo-section {
+    to {
+        margin-left: 0%;
         width: 100%;
-        background-color: aquamarine;
-        margin: 0%;
-        top: 0;
     }
+}
 
+.index-logo-section {
+    background-color: #8F8389;
+    margin: 0%;
+    top: 0;
+}
 
+h1,
+h2,
+h3 {
+    font-style: italic;
+}
 
-    h1,
-    h2 {
-        font-style: italic;
-    }
+.Kevin {
+    font-weight: 900;
+    text-align: start;
+    font-style: normal;
+    color: red;
+    font-size: 5rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 2rem;
+}
 
+.Kevin span {
+    color: black;
+}
 
+nav {
+    position: sticky;
+    top: 0;
+    opacity: 90%;
+    justify-content: end;
+}
 
-    .Kevin {
-        text-align: start;
-        font-style: normal;
-        color: red;
-        font-size: 5rem;
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-left: 2rem;
-    }
+.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #333;
+    overflow: hidden;
+}
 
-    .Kevin span {
-        color: black;
-    }
+.list {
+    display: flex;
+    justify-content: end;
+}
 
-    nav {
-        position: sticky;
-        top: 0;
-        opacity: 90%;
-    }
+.text {
+    display: block;
+    font-size: large;
+    color: white;
+    padding: 10px 12px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
 
-    .nav-bar {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-    }
+.text:hover {
+    background-color: #474747;
+}
 
+.title {
+    margin-bottom: 0;
+    text-align: center;
+}
 
-    .list {
-        float: right;
-        margin-right: 2rem;
+.about-me-section {
+    display: flex;
+    margin-top: auto;
+    padding: 10px;
+    background-color: #A7C4A0;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+.about-me-header-paragraph {
+    width: 50rem;
+}
+
+.hobbies-section {
+    text-align: center;
+    display: flex;
+    background-color: #C2EABA;
+    padding: 10px;
+    justify-content: space-evenly;
+    flex-wrap: wrap-reverse;
+}
+
+.hobbies-list-tab {
+    align-self: center;
+    cursor: pointer;
+    background-color: #9bf788;
+    box-shadow: 5px 5px 5px #000000;
+    border-radius: 10px;
+    padding: 5px;
+    width: 15rem;
+}
+
+.hobbies-header-list-paragraph {
+    display: flex;
+    flex-direction: column;
+    width: 50rem;
+}
+
+.hobbies-list {
+    list-style-type: square;
+}
+
+.pic-me {
+    width: 550px;
+    border-style: inset;
+    border-width: thick;
+    border-color: rgb(255, 255, 255);
+    margin-top: 10px;
+    margin-bottom: 5rem;
+    transition: all 2s;
+    border-radius: 50%;
+}
+
+.pic-basketball {
+    width: 550px;
+    border-style: inset;
+    border-width: thick;
+    border-color: rgb(255, 255, 255);
+    margin-top: 10px;
+    margin-bottom: 5rem;
+    transition: all 2s;
+    border-radius: 50%;
+}
+
+.pic-me:hover,
+.pic-basketball:hover {
+    width: 500px;
+}
+
+.secondpage-logo-section {
+    background-color: #B9C6AE;
+    margin: 0%;
+    top: 0;
+}
+
+.secondpage-nav-bar {
+    top: 0;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    background-color: #588B8B;
+    overflow: hidden;
+    opacity: 0.7;
+    position: sticky;
+}
+
+.secondpage-link {
+    float: right;
+}
+
+.secondpage-link a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    text-transform: uppercase;
+}
+
+.secondpage-link a:hover {
+    background-color: #2b6280;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.basketball-section {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #8A95A5;
+}
+
+.basketball-section-header-paragraph-vid {
+    text-align: center;
+    width: 50rem;
+}
+
+.heat-logo,
+.lakers-logo {
+    display: grid;
+    width: 30rem;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5rem;
+}
+
+.lakers {
+    width: 30rem;
+}
+
+.heat {
+    width: 50rem;
+}
+
+.vid {
+    margin-top: 4rem;
+    margin-bottom: 10rem;
+}
+
+.timeline-section {
+    background-color: #474056;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.timeline {
+    margin-top: 5rem;
+    width: 1000px;
+    height: 1000px;
+    position: relative;
+    margin-bottom: 7rem;
+}
+
+.timeline::after {
+    background-color: rgb(73, 213, 255);
+    content: '';
+    width: 6px;
+    top: 20px;
+    bottom: 0;
+    left: 50%;
+    position: absolute;
+}
+
+.box {
+    padding: 10px 40px;
+    width: 50%;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.box::after {
+    top: 20px;
+    width: 25px;
+    height: 25px;
+    right: -20px;
+    position: absolute;
+    border: solid;
+    border-color: #000000;
+    border-width: 3px;
+    background-color: white;
+    z-index: 1;
+    border-radius: 50%;
+    content: '';
+}
+
+.left {
+    left: -1.5px;
+}
+
+.right {
+    left: 50.4%;
+}
+
+.left::before {
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 24px;
+    width: 0;
+    z-index: 1;
+    right: 31px;
+    border-width: medium;
+    border: solid;
+    border-color: white;
+    border-color: white;
+    border-bottom-width: 10px;
+    border-left-width: 10px;
+    border-right-width: 0;
+    border-top-width: 10px;
+    border-bottom-color: transparent;
+    border-left-color: white;
+    border-right-color: transparent;
+    border-top-color: transparent;
+}
+
+.right::before {
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 24px;
+    width: 0;
+    z-index: 1;
+    left: 31px;
+    border-width: medium;
+    border: solid;
+    border-color: white;
+    border-bottom-width: 10px;
+    border-left-width: 0px;
+    border-right-width: 10px;
+    border-top-width: 10px;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-right-color: white;
+    border-top-color: transparent;
+}
+
+.right::after {
+    left: -16px
+}
+
+.content {
+    padding: 10px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 10px;
+}
+
+.left h3 {
+    text-align: end;
+}
+
+.content:hover {
+    transform: scale(1.1);
+}
+
+.vid {
+    width: 660px;
+    height: 415px;
+}
+
+@media screen and (max-width: 991px) and (min-width: 767px) {
+    body {
+        background-color: lightslategray;
+
     }
 
     .text {
-        text-align: center;
-        font-size: large;
-        display: block;
-        color: white;
-        padding: 10px 12px;
-        text-decoration: none;
-        text-transform: uppercase;
+        font-size: 90%;
     }
 
-    .text:hover {
-        background-color: #474747;
+    .secondpage-text {
+        font-size: 170%;
     }
 
-    .title {
-        margin-bottom: 0;
-        text-align: center;
-    }
-
-    .about-me-section {
-        display: flex;
-        padding: 10px;
-        background-color: #FFD5C2;
-        flex-wrap: wrap;
-        text-align: center;
-        justify-content: space-evenly;
-    }
-
-    .about-me-header-paragraph {
-        width: 50rem;
-    }
-
-    .hobbies-section {
-        text-align: center;
-        display: flex;
-        background-color: #F28F3B;
-        padding: 10px;
-        justify-content: space-evenly;
-        flex-wrap: wrap-reverse;
-    }
-
-    .hobbies-list-tab {
-        align-self: center;
-        cursor: pointer;
-        background-color: #f7b77f;
-        box-shadow: 5px 5px 5px #000000;
-        border-radius: 10px;
-        padding: 5px;
-        width: 15rem;
-    }
-
-    .hobbies-header-list-paragraph {
-        display: flex;
-        flex-direction: column;
-        width: 50rem;
-
-    }
-
-    .hobbies-list {
-        list-style-type: square;
-    }
-
-    .pic-me {
-        width: 550px;
-        border-style: inset;
-        border-width: thick;
-        border-color: rgb(255, 255, 255);
-        margin-top: 10px;
-        margin-bottom: 5rem;
-        transition: all 2s;
-        border-radius: 100%;
-    }
-
-    .pic-basketball {
-        width: 550px;
-        border-style: inset;
-        border-width: thick;
-        border-color: rgb(255, 255, 255);
-        margin-top: 10px;
-        margin-bottom: 5rem;
-        transition: all 2s;
-        border-radius: 100%;
-    }
-
-    .pic-of-me:hover {
-        width: 500px;
-    }
-
-    .secondpage-body {
-        background-color: green;
-    }
-
-    .secondpage-logo-section {
-        background-color: rgb(180, 209, 199);
-        margin: 0%;
-        top: 0;
-        width: 100%;
-    }
-
-    .secondpage-nav-bar {
-        top: 0;
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        background-color: #588B8B;
-        overflow: hidden;
-        opacity: 0.7;
-        position: sticky;
-    }
-
-    .secondpage-link {
-        float: right;
-    }
-
-    .secondpage-link a {
-        display: block;
-        text-decoration: none;
-        color: white;
-        text-align: center;
-        padding: 5px;
-        text-transform: uppercase;
-
-    }
-
-    .secondpage-link a:hover {
-        background-color: #2b6280;
-    }
-
-    main {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-
-    .basketball-section {
-        display: flex;
-        justify-content: space-evenly;
-        background-color: lightblue;
-        flex-wrap: wrap;
-
+    .secondpage-Kevin {
+        font-size: 700%;
     }
 
     .basketball-section-header-paragraph-vid {
-        text-align: center;
-        width: 50rem;
+        font-size: 190%;
     }
 
-
-
-
-    .heat-logo,
-    .lakers-logo {
-        display: grid;
-        width: 30rem;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 5rem;
-
-
+    .title-section-secondpage {
+        font-size: 200%;
     }
-
-    .lakers {
-        width: 30rem;
-    }
-
-    .heat {
-        width: 50rem;
-    }
-
-
 
     .vid {
-        margin-top: 4rem;
-        margin-bottom: 10rem;
-
-    }
-
-
-
-    .timeline-section {
-        display: flex;
-        flex-direction: column;
-        background-color: #f7b77f;
-        align-items: center;
-        background-image: linear-gradient(red, rgb(255, 90, 90), rgb(252, 171, 171));
-        margin-bottom: 10rem;
-    }
-
-    .timeline {
-        position: relative;
-        max-width: 800px;
-        margin-bottom: 3rem;
-    }
-
-    .timeline::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 100px;
-        left: 50%;
-        width: 10px;
-        background-color: #000000;
-    }
-
-    .text-box {
-        position: relative;
-        padding: 20px;
-        background-color: #ffffff;
-        border: 2px solid #333;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        margin-bottom: 50px;
-        transition: all 1ms;
-        width: 30rem;
-
-
-    }
-
-    .text-box:hover {
-        transform: scale(1.1);
-    }
-
-    .last-text-box {
-        margin-bottom: 50px;
-
-    }
-
-    .date {
-        font-weight: bold;
-        text-align: center;
-        text-decoration: underline;
-    }
-
-    .description {
-        text-align: center;
-    }
-
-    /* .arrow {
-        position: absolute;
-        bottom: -15px;
-        left: 50%;
-        width: 0;
-        height: 0;
-        border-left: 20px solid transparent;
-        border-right: 20px solid transparent;
-        border-top: 25px solid #000000;
-        transform: translateX(-37%);
-        content: '';
-    } */
-
-    footer {
-        margin-top: 0px;
+        width: 800px;
+        height: 600px;
     }
 }
+
+/* 
+media query doesn't work after first breakpoint
+
+@media screen and (max-width: 766px) and (min-width:479px) {
+    body {
+        background-color: rgb(245, 245, 245);
+
+    }
+
+    .text {
+        font-size: 1200%;
+    }
+
+    .secondpage-text {
+        font-size: 170%;
+    }
+
+    .secondpage-Kevin {
+        font-size: 700%;
+    }
+
+    .basketball-section-header-paragraph-vid {
+        font-size: 190%;
+    }
+
+    .title-section-secondpage {
+        font-size: 200%;
+    }
+
+    .vid {
+        width: 800px;
+        height: 600px;
+    } 
+}
+*/
